 7. Fix default margin settings - these were too small.
 8. Add option to draw line after frameless groupbox title.
 9. Add option to use faded lines (toolbar separators, menutitem separators,
    etc.)
10. Support QLabel buddy widgets, as per KStyle.
11. Adjust focus margins on checks/radios that don't have text.
12. Fix misdrawn gradients in kwin's buttons of moveable maximised windows.

0.60
----
 1. If appearance is rounded, also round the 'rubber band' selection.
 2. Dont draw light border around selection.
 3. Round all view selections.
 4. Fix mouse-over selections with custom gradient.
 5. Fix KDE app checking.
 6. New focus rect options - standard, highlight, background, filled.
 7. Add the ability to specify popup menu light factor.
 8. Put more space between arrows on combos if using Gtk combo menus and
    V arrows.
 9. Fix blurry arrows in url navigator.
10. Set menu palette.
11. Add option to use darkened background colour for menuitem selection.
12. Add 'fade' to menuitem appearance.
13. Option to have flat scrollbar buttons.
14. New slider styles - plain rotated, and round rotated.
15. Modified window decorations's 'on all desktops' button.
16. Fix plain stripes on flat progressbar.
17. Fix large border in kontact.
18. Use lighter shade for titlebar fill.
19. Add option to specify appearance of titlebar buttons.
20. Add option to specify appearance of inactive titlebars.
21. Recolour X of close button - not button background.
22. Dont draw sunken button for KMenu title background - just draw Menu background.
23. Alter the way the light part of etchibng is drawn - should help with darker color schemes.
24. Don't draw light etch part for widget in QAbstractItemView's, KRunner, or Plasma dialogs.
25. Increase size of busy progressbar.
26. Draw border around filled progress.
27. Option to have button-like checks/radios.
28. Set KDE palette for Qt applications.
29. React to KDE font and palette changes for Qt only applications.
30. Style QToolBox